sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: '<-' expected but ')' found.
    for (i+ecart to getNombreValeurs()){
                                      ^AlgCombSort:18: error: illegal start of simple expression
  }while(ecart>1 || s)
  ^