sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs() 
  var s=false
  do{
    s=false
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    var i=0
    for (i+ecart to getNombreValeurs()){
      if (!plusPetit(i, i+1) ){
        echange(i,i+1)
        s=true
      }
      i=i+1
    }
  }while(ecart>1 || s)
}